2007-08-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* gtoken.tcl: Applied patch #1774859 from Sergei Golovan to handle
	failed authentication.

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sasl.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-10-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sasl.tcl (::SASL::CreateNonce): Acquire random data from
	/dev/urandom to avoid blocking.
	* pkgIndex.tcl: Increment patchlevel
	
2006-09-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ntlm.tcl:     bug 1557494 - added support for OEM-type
	* ntlm.test:    NTLM packets (provided by Mark Janssen)
	* pkgIndex.tcl: Increment NTLM version to 1.1.0

2006-09-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sasl.tcl:     Incremented package version to 1.3.0, updated
	* sasl.man:     the manual page to cover the OTP mechanism
	* sasl.test:    and added a test for OTP client functionality.
	* pkgIndex.tcl:

2006-09-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sasl.tcl:   Support OTP mechanism (depends upon the otp module).
	              client only, awaiting tests.

2006-04-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* all:        Incremented version to 1.2.0
	* sasl.man:   Updated documentation.
	* sasl.tcl:   Implemented DIGEST-MD5 server. Enhanced the mechanisms
	              command so we can obtain either client or server
	              mechanisms. Added a threshold value to the mechanisms
		      command to set minimum security. Changed register to
	              uniquely register mechanisms to permit re-sourcing
		      the script.
	
2006-04-20  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sasl.tcl:   Applied patch for #1412021 from Sergei Golovan to